log/build_2025-10-14_13-38-05/lab01_pkg/stderr.log
  File "/home/fiammetta/ros-stuff/ros2_ws/install/lab01_pkg/lib/python3.10/site-packages/lab01_pkg/controller.py", line 23
    msg.linear = Vector3(x: 1,y:0,z:0)
                          ^
SyntaxError: invalid syntax

